removi imports não permitidos e adaptei o codigo